replace p tag with div class sreen

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
 
@@ -12,10 +13,8 @@
 
 
 
-  <div>
-    <div>
-      <p>The machine is stopped.</p>
-    </div>
+  <div class="calculator">
+    <div class="screen">0</div>
 
     <div>
       <button type="button" id="seven">7</button>
